# cakerabbit-core

./: .gitignore  Cargo.toml  changelog.md  readme.md
benches/: client_serv.rs
examples/echo/: mod.rs
examples/echo_use_crateio/: Cargo.toml
examples/echo_use_crateio/src/: client.rs  server.rs
examples/echo_use_localsource/: client_use_cake.rs  communicate_trace.md  mod.rs  server_use_cake.rs  server_use_cake_httpapi.rs  server_use_cake_rspbigdata.rs
examples/scripts/: mprpc_client.go  mprpc_client.py  mprpc_client2.go
src/: cakeclient.rs  cakeservice.rs  codec.rs  config.rs  endpoint.rs  errors.rs  failmode.rs  lib.rs  main.rs  message.rs  node.rs  reg.rs  reg_consul.rs  selector.rs
tests/: comm.rs
