[package]
name = "cakerabbit-core"
version = "0.1.0"
authors = ["halokid <r00txxyyzz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
tokio-util = { version = "0.6", features = ["codec", "compat"] }
rmpv = "0.4"
bytes = "1.0"
log = "0.4"
env_logger = "0.8"
tokio = { version = "1.4", features = ["rt", "rt-multi-thread"] }
#consul-rs-plus = { path = "../consul-rs-plus" }
consul-rs-plus = "0.1.6"
local_ipaddress = "0.1.3"
serde = { version = "1.0.126",features = ["derive"]}
serde_json = "1.0.40"
rand = "0.8.4"

[dev-dependencies]
env_logger = "0.8"
chrono = "0.4"
tokio = { version = "1.4", features = ["macros", "net", "time"] }

[profile.dev]
incremental = true

[[example]]
name = "echoclient"
path = "examples/echo/client_use_cake.rs"

[[example]]
name = "echoserver"
path = "examples/echo/server_use_cake.rs"



