[package]
name = "echo_use_crateio"
version = "0.1.0"
authors = ["r0x <r00txxyyzz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cakerabbit-core = "0.1.0"
futures = "0.3"
tokio = { version = "1.4", features = ["rt", "rt-multi-thread"] }
tokio-util = { version = "0.6", features = ["codec", "compat"] }
log = "0.4"
env_logger = "0.8"
serde = { version = "1.0.126",features = ["derive"]}
serde_json = "1.0.40"

[dev-dependencies]
env_logger = "0.8"
chrono = "0.4"
tokio = { version = "1.4", features = ["macros", "net", "time"] }

[profile.dev]
incremental = true

[[example]]
name = "echoclient"
path = "src/client.rs"

[[example]]
name = "echoserver"
path = "src/server.rs"



